Bug 1323363 - Fix non-paranoid PBO uploads. - r=ethlin a=gchang

MozReview-Commit-ID: L0nCELNAmBc